# django-xpower

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
django_xpower/: middleware.py
example/: db.sqlite3
example/example/: settings.py
